--- a/v4-compras/demo/src/main/resources/templates/inicio.html
+++ b/v4-compras/demo/src/main/resources/templates/inicio.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Listado de Proveedores</title>
+    <title>Inicio</title>
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
     <link rel="stylesheet"
           href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
