--- a/v4-compras/demo/src/main/resources/templates/proveedor/crear.html
+++ b/v4-compras/demo/src/main/resources/templates/proveedor/crear.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Crear Proveedor</title>
+    <link th:href="@{/webjars/bootstrap/5.3.2/css/bootstrap.min.css}" rel="stylesheet">
 </head>
 <body>
+<div class="container mt-5">
+    <h1>Crear Proveedor</h1>
+    <form th:action="@{/compudorado/ui/proveedor/crear}" th:object="${proveedor}" method="post">
 
+        <div class="mb-3">
+            <label for="nombre" class="form-label">Nombre</label>
+            <input type="text" class="form-control" id="nombre" th:field="*{nombre}" required>
+        </div>
+
+
+        <button type="submit" class="btn btn-primary">Guardar</button>
+    </form>
+</div>
 </body>
 </html>
